app-ghost/ghost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  annotations:
spec:
  rules:
  - host: ghost.cpod-nsxv8.az-stc.cloud-garage.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghost-svc
            port:
              number: 80
